# McQuickBoot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  McIocBoot.pro  McQuickBoot.cmake  McQuickBoot.pri  McQuickBoot.pro  README.md  common.pri
Examples/: CMakeLists.txt  Examples.pro
Examples/BootTest/: BootTest.pro  BootTest.scxml  InvokeTest.cpp  InvokeTest.h  Object.h  QmlSocketTest.h  application.yml  main.cpp  main.qml
Examples/BootWidget/: BootWidget.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  main.qml
Examples/CoreExample/: CMakeLists.txt  ExamplePluginData.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  MetaTypeRegister.cpp  MetaTypeRegister.h  RegisterTest.cpp  RegisterTest.h  SimpleInterface.h  SimpleInterface2.h  main.cpp
Examples/IocExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PluginChecker.cpp  PluginChecker.h  main.cpp
Examples/IocTest/: C.cpp  C.h  IocTest.pro  ioc.yml  main.cpp  myspring.xml
Examples/LibraryExample/: CMakeLists.txt  LibraryExample.cpp  SimpleObject.cpp  SimpleObject.h  SimplePod.cpp  SimplePod.h
Examples/LogExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  log.xml  main.cpp  resource.qrc
Examples/LogTest/: LogTest.pro  logqt.ini  logqt.xml  logqt.yml  main.cpp
Examples/OrmTest/: Article.cpp  Article.h  OrmTest.pro  TestDao.cpp  TestDao.h  TestVo.cpp  TestVo.h  d_orm_test.db  main.cpp  main.qml
Examples/PluginExample/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.h
Examples/PluginExample2/: CMakeLists.txt  SimplePlugin2.cpp  SimplePlugin2.h
Examples/QuickBootExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QuickBootExample.pro  application.yml  main.cpp  main.qml  widgetioc.xml
Examples/ServiceTest/: Global.cpp  ServiceTest.pro
Examples/SimpleBoot/: SimpleBoot.pri  SimpleBoot.pro  main.cpp
Examples/Test/: Interface.h  InvokeTest.cpp  InvokeTest.h  IocTest.cpp  IocTest.h  Object.cpp  Object.h  QmlSocketTest.cpp  QmlSocketTest.h  Test.pro  ThreadTest.h  ioc.yml  ioc2.yml  main.cpp  main.qml  myspring.xml  qml.qrc  xmltest2.xml
Examples/WidgetExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resource.qrc  widgetTest.xml
Examples/WidgetIocTest/: WidgetIocTest.pro  application.yml  main.cpp  widgetioc.xml
Examples/YamlTest/: YamlTest.pro  main.cpp  resource.qrc  testyaml.yml
McCore/: CMakeLists.txt  McConfig.h.in  McCore.cmake  McCore.pri  McGlobal.cpp  McGlobal.h  McMacroGlobal.h  McMetaType.cpp  McMetaType.h  McMetaType_Qt5.cpp  McMetaType_Qt5.h
McCore/Callback/: IMcCallback.h
McCore/Config/: McConfigNode.cpp  McConfigNode.h  McConfigNodeIterator.cpp  McConfigNodeIterator.h  McRuntimeConfig.cpp  McRuntimeConfig.h  McRuntimeConfigObject.cpp  McRuntimeConfigObject.h  McRuntimeConfigValue.cpp  McRuntimeConfigValue.h
McCore/Connection/: McAbstractConnection.cpp  McAbstractConnection.h  McCppConnection.cpp  McCppConnection.h
McCore/Destroyer/: IMcDestroyer.h
McCore/Event/: McEventDispatcher.cpp  McEventDispatcher.h  McEventRouter.cpp  McEventRouter.h
McCore/MemoryLibrary/: McMemoryLibrary.cpp  McMemoryLibrary.h  memload.cpp  memload.h
McCore/PluginChecker/: IMcPluginChecker.h
McCore/Utils/: IMcDestroyer.h  McCancel.cpp  McCancel.h  McCrashHandler.cpp  McCrashHandler.h  McJsonUtils.cpp  McJsonUtils.h  McJsonUtils_Qt5.cpp  McJsonUtils_Qt5.h  McPause.cpp  McPause.h  McProgress.cpp  McProgress.h  McQVariantConverter.h  McRequest.cpp  McRequest.h  McSignalBlocker.cpp  McSignalBlocker.h  McSlotObjectWrapper.cpp  McSlotObjectWrapper.h
McCore/Zip/: McCompressor.cpp  McCompressor.h  unzip.c  unzip.h  zip.c  zip.h
McIoc/: CMakeLists.txt  McGlobal.h  McIoc.cmake  McIoc.pri  McIoc.pro  McIocConstantGlobal.h  McIocDepend.pri  McIocGlobal.cpp  McIocGlobal.h  McIocMacroGlobal.h
McIoc/ApplicationContext/: IMcApplicationContext.h  IMcReadableApplicationContext.h  IMcRefreshableApplicationContext.h
McIoc/BeanBuilder/: IMcBeanBuilder.h  IMcBeanReferenceResolver.h  IMcCustomBeanBuilderFactory.h  IMcCustomPlaceholder.h  McCustomBeanBuilderContainer.cpp  McCustomBeanBuilderContainer.h
McIoc/BeanBuilderReader/: IMcBeanBuilderReader.h
McIoc/BeanFactory/: IMcBeanBuilderRegistry.h  IMcBeanFactory.h  IMcBeanReferenceResolver.h  IMcConfigurableBeanFactory.h
McIoc/Utils/: IMcBeanBuildable.h  IMcDestroyer.h
McIoc/src/: McGlobal.cpp  McInitGlobal.cpp
McLog/: CMakeLists.txt  McLog.cmake  McLog.pri  McLogGlobal.cpp  McLogGlobal.h  McLogMacroGlobal.h  McLogManager.cpp  McLogManager.h
McLog/Appender/: IMcAppender.h  IMcCodecableAppender.h  IMcConfigurableAppender.h  IMcRequestableNextFile.h  IMcWritableAppender.h
McLog/Configurator/: McXMLConfigurator.cpp  McXMLConfigurator.h
McLog/Device/: McVSDebugDevice.cpp  McVSDebugDevice.h
McLog/Layout/: IMcLayout.h
McLog/Logger/: IMcLogger.h
McLog/Repository/: IMcAdditionalTask.h  IMcLoggerRepository.h
McLog/Utils/: McFileUtils.cpp  McFileUtils.h  McLogDeleter.cpp  McLogDeleter.h  McLogPackager.cpp  McLogPackager.h  McMessagePattern.cpp  McMessagePattern.h
McQuickBoot/: CMakeLists.txt  McQuickBoot.cmake  McQuickBoot.pri  McQuickBoot.pro  McQuickBootConstantGlobal.h  McQuickBootDepend.pri  McQuickBootGlobal.cpp  McQuickBootGlobal.h  McQuickBootMacroGlobal.h
McQuickBoot/ComponentContainer/: McControllerContainer.cpp  McControllerContainer.h  McControllerEntity.h
McQuickBoot/Invoker/: McAbstractInvoker.cpp  McAbstractInvoker.h  McAbstractPromise.cpp  McAbstractPromise.h  McCppInvoker.cpp  McCppInvoker.h  McCppPromise.cpp  McCppPromise.h  McInvoker.cpp  McInvoker.h  McQmlInvoker.cpp  McQmlInvoker.h  McQmlPromise.cpp  McQmlPromise.h  McResult.cpp  McResult.h
McQuickBoot/QuickBoot/: McAbstractQuickBoot.cpp  McAbstractQuickBoot.h  McCppQuickBoot.cpp  McCppQuickBoot.h  McQmlQuickBoot.cpp  McQmlQuickBoot.h  McQuickBoot.cpp  McQuickBoot.h
McQuickBoot/Resources/: Resources.qrc  invoker.mjs
McQuickBoot/Utils/: McQmlSyncCallback.cpp  (+1 more)
McWidget/: CMakeLists.txt  McWidget.cmake  McWidget.pri  McWidgetGlobal.cpp  McWidgetGlobal.h  McWidgetMacroGlobal.h
Tests/: CMakeLists.txt
(+843 files in other folders)
