cmake_minimum_required(VERSION 3.21)

set(MC_QUICKBOOT_VERSION_MAJOR 2)
set(MC_QUICKBOOT_VERSION_MINOR 1)
set(MC_QUICKBOOT_VERSION_PATCH 0)
set(MC_QUICKBOOT_VERSION ${MC_QUICKBOOT_VERSION_MAJOR}.${MC_QUICKBOOT_VERSION_MINOR}.${MC_QUICKBOOT_VERSION_PATCH})

project(McQuickBoot
    VERSION ${MC_QUICKBOOT_VERSION}
    DESCRIPTION "McQuickBoot Libraries"
    HOMEPAGE_URL "https://github.com/mrcao20/McQuickBoot"
    LANGUAGES CXX)

option(BUILD_EXAMPLES "Build examples" ON)
option(INSTALL_TO_QT "Install output to qt location" OFF)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 COMPONENTS Core REQUIRED)

set(CMAKE_DEBUG_POSTFIX "d")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/output CACHE PATH "Default install prefix" FORCE)
endif()

set(MC_QUICKBOOT_INSTALL_HEADERS ${CMAKE_INSTALL_PREFIX}/include)
set(MC_QUICKBOOT_INSTALL_LIBS ${CMAKE_INSTALL_PREFIX}/lib)
set(MC_QUICKBOOT_INSTALL_BINS ${CMAKE_INSTALL_PREFIX}/bin)

if(INSTALL_TO_QT)
    get_target_property(qmake Qt6::qmake LOCATION)
    execute_process(
        COMMAND ${qmake} -query QT_INSTALL_HEADERS
        OUTPUT_VARIABLE QT_INSTALL_HEADERS
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    execute_process(
        COMMAND ${qmake} -query QT_INSTALL_LIBS
        OUTPUT_VARIABLE QT_INSTALL_LIBS
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    execute_process(
        COMMAND ${qmake} -query QT_INSTALL_BINS
        OUTPUT_VARIABLE QT_INSTALL_BINS
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    execute_process(
        COMMAND ${qmake} -query QT_INSTALL_PREFIX
        OUTPUT_VARIABLE QT_INSTALL_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    list(APPEND MC_QUICKBOOT_INSTALL_HEADERS ${QT_INSTALL_HEADERS})
    list(APPEND MC_QUICKBOOT_INSTALL_LIBS ${QT_INSTALL_LIBS})
    list(APPEND MC_QUICKBOOT_INSTALL_BINS ${QT_INSTALL_BINS})
endif()

add_subdirectory(McCore)
if(BUILD_EXAMPLES)
    add_subdirectory(Examples)
endif()
